[project]
name = "various-apis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pre-commit>=3.5.0",
    "pyright>=1.1.407",
    "pytest>=8.3.5",
    "ruff>=0.14.9",
]

[tool.pyright]
# Enable strict type checking for all files
typeCheckingMode = "strict"
include = ["src", "tests"]
exclude = [
    "./__pycache__",
    ".venv",
]
